--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,8 @@
 :root {
-  --md-primary-fg-color:        #EE0F0F;
-  --md-primary-fg-color--light: #ECB7B7;
-  --md-primary-fg-color--dark:  #90030C;
+  --md-primary-fg-color:        #171923;
+  --md-primary-fg-color--light: #171923;
+  --md-primary-fg-color--dark:  #171923;
+
+  --md-accent-fg-color: #FE64D8;
+  --md-accent-bg-color: #FE64D8;
 }
