--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -121,7 +121,11 @@
 }
 
 .md-typeset a {
-    color: #fe64d8;
+    color: #01ccf5;
     word-break: break-word;
+}
+
+.md-nav__item .md-nav__link--active, .md-nav__item .md-nav__link--active code {
+    color: #fe64d8;
 }
 
