--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -129,3 +129,14 @@
     color: #fe64d8;
 }
 
+@keyframes heart {
+  0%, 40%, 80%, 100% {
+    transform: scale(1);
+  }
+  20%, 60% {
+    transform: scale(1.15);
+  }
+}
+.heart {
+  animation: heart 1000ms infinite;
+}
