--- a/site/stylesheets/extra.css
+++ b/site/stylesheets/extra.css
@@ -119,3 +119,24 @@
   -webkit-mask-image: var(--md-admonition-icon--difference);
           mask-image: var(--md-admonition-icon--difference);
 }
+
+.md-typeset a {
+    color: #01ccf5;
+    word-break: break-word;
+}
+
+.md-nav__item .md-nav__link--active, .md-nav__item .md-nav__link--active code {
+    color: #fe64d8;
+}
+
+@keyframes heart {
+  0%, 40%, 80%, 100% {
+    transform: scale(1);
+  }
+  20%, 60% {
+    transform: scale(1.15);
+  }
+}
+.heart {
+  animation: heart 1000ms infinite;
+}
